--- a/style.css
+++ b/style.css
@@ -51,11 +51,11 @@ input, .botao {
 }
 
 .info {
-    display: flex;
+    display: none;
     align-items: center;
     gap: 10px;
     width: 50%;
-    background-color: rgb(237, 243, 243);
+    background-color: rgb(105, 223, 223);
     margin: 30px 0px;
     margin: auto;
     color: rgb(88, 88, 88);
@@ -72,6 +72,7 @@ input, .botao {
 }
 .cityName {
     padding: 10px;
+    text-align: center;
 }.temperatura, .vento {
     display: flex;
     justify-content: center;
@@ -108,4 +109,8 @@ input, .botao {
 .tempInfo, .ventoInfo {
     font-weight: bolder;
     font-size: 1.1em;
+}
+.ventoImg img{
+    width: 100px;
+    height: 100px;
 }
